--- a/devshots.html
+++ b/devshots.html
@@ -7,7 +7,7 @@
   <body>
   
     <section id = "lectures">
-      <div class = "lectures_class"
+      <div class = "lectures_class">
         <h2>6 INTERESTING SHORT LECTURES</h2>
         <article>
           DIGITAL WORLD 1
