--- a/devshots.html
+++ b/devshots.html
@@ -31,6 +31,7 @@
     </section>
     
     <section id = "useful_information">
+    <h2>Useful Information</h2>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
