--- a/devshots.html
+++ b/devshots.html
@@ -35,62 +35,62 @@
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>HTML 5 Course/p>
+  			<p>HTML 5 Course</p>
   			<p>books list...</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>User Experience/p>
+  			<p>User Experience</p>
   			<p>netcraft academy website</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>Netcraft Blog/p>
+  			<p>Netcraft Blog</p>
   			<p>People of netcraft blog</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>Recommended Books/p>
+  			<p>Recommended Books</p>
   			<p>books list...</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>Recommended Books/p>
+  			<p>Recommended Books</p>
   			<p>books list...</p>
 	  	</div>
 	  	<hr>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>HTML 5 Course/p>
+  			<p>HTML 5 Course</p>
   			<p>books list...</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>User Experience/p>
+  			<p>User Experience</p>
   			<p>netcraft academy website</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>Netcraft Blog/p>
+  			<p>Netcraft Blog</p>
   			<p>People of netcraft blog</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>Recommended Books/p>
+  			<p>Recommended Books</p>
   			<p>books list...</p>
 	  	</div>
       <div class="useful_info">
   			<a href=""></a>
   			<img src = "" width="100" height="100"/>
-  			<p>Recommended Books/p>
+  			<p>Recommended Books</p>
   			<p>books list...</p>
 	  	</div>
     </section>
